--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+  <link rel="icon" type="image/png" href="./src/assets/sse.png" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JobFind</title>
+  <title>SSEjobvacancy</title>
 </head>
 
 <body>
